<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activity.LoginActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:contentDescription="@string/logo"
        android:src="@drawable/login_logo"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/id_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_id"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pw"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login" />

    <Button
        android:id="@+id/password_lost_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#00ff0000"
        android:text="@string/lost_pw" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_button"
        android:minHeight="40dp"
        android:padding="0dp"
        android:text="@string/login"
        android:textColor="#ffffff" />

</LinearLayout>
</android.support.constraint.ConstraintLayout>

